--- a/src/frontend/components/App.css
+++ b/src/frontend/components/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  background-color:  #121212;
+  height: 100%;
+  color: white;
+  padding-bottom: 50px;
 }
 
 .App-logo {
@@ -35,4 +38,83 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.center-search-bar {
+  margin: auto;
+}
+
+.collection {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  margin-bottom: 50px;
+  padding-top: 0px
+}
+
+.collection :hover {
+  cursor: pointer;
+  scale: 1.03;
+}
+
+.card {
+  margin: 10px;
+  background-color: #282c34;
+  border-radius: 10px;
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
+  transition: 0.3s;
+  color: white;
+  text-align: center;
+  row-gap: 1px;
+  height: 450px;
+  border-width: 0cap;
+} 
+
+.card-ticket {
+  margin: 10px;
+  background-color: #282c34;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  transition: 0.3s;
+  color: white;
+  text-align: center;
+  row-gap: 1px;
+} 
+
+.card:hover {
+  transform: scale(1.02);
+}
+
+.titles {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 10px;
+  margin-left: 50px;
+  padding-top: 20px;
+  padding-bottom: 0px;
+}
+
+.cardtext {
+  font-size: 0.8rem;
+  padding-inline-start: 0px;
+}
+
+.smalltext {
+  font-size: 0.9rem;
+  font-weight: lighter;
+}
+
+
+.effect:after {
+  background: linear-gradient(-45deg, #121212 16px, transparent 0), linear-gradient(45deg, #121212 16px, transparent 0);
+    background-position: left-bottom;
+    background-repeat: repeat-x;
+    background-size: 32px 32px;
+    content: " ";
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    height: 32px;
 }
